Accesibilidad: Laberinto 70%, instrucciones al top y fuentes extra grandes

--- a/index.html
+++ b/index.html
@@ -140,12 +140,19 @@
         }
 
         .instruction-text {
-            margin-top: 50px;
-            color: rgba(255, 255, 255, 0.4);
-            font-size: 0.8rem;
-            letter-spacing: 0.5rem;
+            position: absolute;
+            top: 15vh;
+            left: 0;
+            width: 100%;
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.8rem;
+            /* Fuente muy grande para accesibilidad */
+            letter-spacing: 0.3rem;
             text-transform: uppercase;
-            font-weight: 200;
+            font-weight: 400;
+            text-align: center;
+            z-index: 220;
+            text-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
         }
 
         /* CAPAS DE LIENZO */
@@ -163,8 +170,8 @@
 
         #maze-canvas {
             z-index: 5;
-            opacity: 0.5;
-            /* Subido al 50% como solicitaste */
+            opacity: 0.7;
+            /* Opacidad al 70% para máxima visibilidad */
         }
 
         #trail-canvas {
@@ -598,11 +605,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="instruction-text">MANTÉN PARA EMPEZAR</div>
                 </div>
-                <!-- Botón recolocado arriba de los créditos -->
+                <div class="instruction-text">MANTÉN PRESIONADO</div>
+                <!-- Botón recolocado arriba de los créditos con fuente grande -->
                 <div id="purpose-trigger" onclick="togglePurpose(true)"
-                    style="position: absolute; bottom: 80px; left: 50%; transform: translateX(-50%); color: var(--cyan); opacity: 0.7; font-size: 0.75rem; letter-spacing: 0.2rem; text-decoration: underline; cursor: pointer; z-index: 210; padding: 10px; width: 100%; text-align: center;">
+                    style="position: absolute; bottom: 100px; left: 50%; transform: translateX(-50%); color: var(--cyan); opacity: 0.8; font-size: 1.4rem; letter-spacing: 0.2rem; text-decoration: underline; cursor: pointer; z-index: 210; padding: 10px; width: 100%; text-align: center; font-weight: 400;">
                     ¿CÓMO ME AYUDA?
                 </div>
             </div>
