Fix UI: Reubicación real de botones al top y bottom para máxima accesibilidad

--- a/index.html
+++ b/index.html
@@ -606,12 +606,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="instruction-text">MANTÉN PRESIONADO</div>
-                <!-- Botón recolocado arriba de los créditos con fuente grande -->
-                <div id="purpose-trigger" onclick="togglePurpose(true)"
-                    style="position: absolute; bottom: 100px; left: 50%; transform: translateX(-50%); color: var(--cyan); opacity: 0.8; font-size: 1.4rem; letter-spacing: 0.2rem; text-decoration: underline; cursor: pointer; z-index: 210; padding: 10px; width: 100%; text-align: center; font-weight: 400;">
-                    ¿CÓMO ME AYUDA?
-                </div>
+            </div>
+            <!-- Elementos de accesibilidad fuera del contenedor centrado para libre posición -->
+            <div class="instruction-text">MANTÉN PRESIONADO</div>
+            <div id="purpose-trigger" onclick="togglePurpose(true)"
+                style="position: absolute; bottom: 120px; left: 50%; transform: translateX(-50%); color: var(--cyan); opacity: 0.9; font-size: 1.6rem; letter-spacing: 0.2rem; text-decoration: underline; cursor: pointer; z-index: 210; padding: 10px; width: 100%; text-align: center; font-weight: 400; text-shadow: 0 0 10px rgba(0,0,0,0.5);">
+                ¿CÓMO ME AYUDA?
             </div>
         </div>
 
