--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
 
         .purpose-header {
             color: var(--cyan);
-            font-size: 1.4rem;
+            font-size: 2rem;
+            /* Aumentado para accesibilidad */
             letter-spacing: 0.5rem;
             margin-bottom: 30px;
             text-transform: uppercase;
@@ -421,10 +422,11 @@
 
         .purpose-body {
             color: #ccc;
-            font-size: 0.95rem;
-            line-height: 1.8;
+            font-size: 1.4rem;
+            /* Aumentado considerablemente */
+            line-height: 1.6;
             letter-spacing: 0.1rem;
-            max-width: 450px;
+            max-width: 600px;
             margin-bottom: 40px;
             font-weight: 200;
         }
@@ -438,12 +440,13 @@
             background: transparent;
             border: 1px solid var(--cyan);
             color: var(--cyan);
-            padding: 12px 35px;
+            padding: 15px 45px;
             text-transform: uppercase;
             letter-spacing: 0.2rem;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 0.8rem;
+            font-size: 1.2rem;
+            /* Botón más legible */
         }
 
         /* LOGIN OVERLAY SYSTEM */
